Code cleanup, add Rune map gametypes, Rune model indexing