@@ -8,12 +8,10 @@ import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Deque;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -30,9 +28,9 @@ import net.shrimpworks.unreal.archive.YAML;
 
 public class Indexer {
 
-	static final Set<String> INCLUDE_TYPES = new HashSet<>(Arrays.asList(
+	static final Set<String> INCLUDE_TYPES = Set.of(
 		"zip", "rar", "ace", "7z", "cab", "tgz", "gz", "tar", "bz2", "exe", "umod", "ut2mod", "ut4mod"
-	));
+	);
 
 	private final ContentManager contentManager;
 	private final IndexerEvents events;
