@@ -1,9 +1,9 @@
 package net.shrimpworks.unreal.archive.content.models;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import net.shrimpworks.unreal.archive.content.Classifier;
 import net.shrimpworks.unreal.archive.content.Incoming;
@@ -27,7 +27,7 @@ import net.shrimpworks.unreal.packages.IntFile;
 public class ModelClassifier implements Classifier {
 
 	// if any of these types are present, its probably part of a mod, mutator, or weapon mod, so rather exclude it
-	private static final List<String> INVALID_CLASSES = Arrays.asList(
+	private static final List<String> INVALID_CLASSES = List.of(
 		"engine.mutator", "botpack.tournamentweapon", "botpack.tournamentgameinfo"
 	);
 
@@ -61,14 +61,14 @@ public class ModelClassifier implements Classifier {
 	}
 
 	private boolean utModel(Incoming incoming, Set<Incoming.IncomingFile> intFiles) {
-		boolean[] seemsToBeAModel = new boolean[] { false };
-		boolean[] probablyNotAModel = new boolean[] { false };
+		final AtomicBoolean probablyNotAModel = new AtomicBoolean(false);
+		final AtomicBoolean seemsToBeAModel = new AtomicBoolean(false);
 
 		// search int files for objects describing a model
 		IndexUtils.readIntFiles(incoming, intFiles)
 				  .filter(Objects::nonNull)
 				  .forEach(intFile -> {
-					  if (probablyNotAModel[0]) return;
+					  if (probablyNotAModel.get()) return;
 
 					  IntFile.Section section = intFile.section("public");
 					  if (section == null) return;
@@ -80,21 +80,22 @@ public class ModelClassifier implements Classifier {
 
 						  // exclude things which may indicate a mod or similar
 						  if (INVALID_CLASSES.contains(mapVal.getOrDefault("MetaClass", "").toLowerCase())) {
-							  probablyNotAModel[0] = true;
+							  probablyNotAModel.setOpaque(true);
 							  return;
 						  }
 
 						  if (mapVal.containsKey("Name")
 							  && mapVal.containsKey("MetaClass")
 							  && mapVal.containsKey("Description")
-							  && mapVal.get("MetaClass").equalsIgnoreCase(Model.UT_PLAYER_CLASS)) {
-
-							  seemsToBeAModel[0] = true;
+							  && (mapVal.get("MetaClass").equalsIgnoreCase(Model.UT_PLAYER_CLASS)
+								  || mapVal.get("MetaClass").equalsIgnoreCase(Model.RUNE_PLAYER_CLASS))
+						  ) {
+							  seemsToBeAModel.set(true);
 						  }
 					  }
 				  });
 
-		return !probablyNotAModel[0] && seemsToBeAModel[0];
+		return !probablyNotAModel.get() && seemsToBeAModel.get();
 	}
 
 	private boolean ut2004Model(Incoming incoming, Set<Incoming.IncomingFile> playerFiles) {
